--- a/Ecommerce/clickable-prototype/index.html
+++ b/Ecommerce/clickable-prototype/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RedCloud | Ecommerce</title>
+    <title>Red Clouds PH | Ecommerce</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -15,6 +15,7 @@
 <body>
     <header>
         <div class="container">
+            <!------------ Nav -------------->
             <div class="navbar">
                 <a href="index.html"><img src="/images/logo.png" class="logo" alt="logo"></a>
                 <nav>
@@ -28,6 +29,7 @@
                 <img src="/images/menu.png" class="menu-icon" onclick="menuToggle()">
                 <p class="cart-count">0</p>
             </div>
+            <!------------ Important content -------------->
             <div class="row">
                 <div class="col-2">
                     <h1>NOLAN COOLEY</h1>
@@ -42,8 +44,8 @@
             </div>
         </div>
     </header>
-    <!------------ Categories ---------------->
-    <div class="categories">
+    <!------------ Featured ---------------->
+    <div class="featured">
         <div class="row small-container">
             <div class="col-3">
                 <img src="/images/category-1.jpg" alt="">
@@ -111,6 +113,7 @@
                 <p>$60.00</p>
             </div>
         </div>
+        <!------------ Latest Products ---------------->
         <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-4">
@@ -213,7 +216,7 @@
             </div>
         </div>
     </div>
-    <!------------- OFFERS --------------->
+    <!------------- Special Offers --------------->
     <div class="offer">
         <div class="small-container">
             <div class="row">
@@ -230,8 +233,8 @@
             </div>
         </div>
     </div>
-    <!------------ testimonial ------------>
-    <div class="testimonial">
+    <!------------ Reviews ------------>
+    <div class="reviews">
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
@@ -282,7 +285,7 @@
             </div>
         </div>
     </div>
-    <!------------------- brands -------------->
+    <!------------ Brands ------------>
     <div class="brands">
         <div class="small-container">
             <div class="row">
@@ -304,7 +307,7 @@
             </div>
         </div>
     </div>
-    <!------------ footer -------------->
+    <!------------ Footer ------------>
     <footer>
         <div class="container">
             <div class="row">
@@ -334,7 +337,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!------------ JS for toggle menu  ------------>
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px"
