--- a/Ecommerce/clickable-prototype/products.html
+++ b/Ecommerce/clickable-prototype/products.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Products - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -31,6 +28,7 @@
             <p class="cart-count">0</p>
         </div>
     </div>
+    <!---------- Search form ---------->
     <div class="small-container product-list">
         <div class="search-form">
             <form action="">
@@ -48,6 +46,7 @@
                 <option>Sort by sale</option>
             </select>
         </div>
+        <!---------- Product List ---------->
         <div class="row">
             <div class="col-4">
                 <img src="/images/product-1.jpg" alt="">
@@ -208,7 +207,7 @@
             <span>7</span>
             <span>&#8594;</span>
         </div>
-        <!-- Categories -->
+        <!---------- Categories ---------->
         <div class="row row-2">
             <h2>Categories</h2>
             <a href="">Show More &#10132;</a>
@@ -248,8 +247,7 @@
             </div>
         </div>
     </div>
-
-    <!------------ footer -------------->
+    <!------------ Footer -------------->
     <footer>
         <div class="container">
             <div class="row">
