--- a/Ecommerce/clickable-prototype/account.html
+++ b/Ecommerce/clickable-prototype/account.html
@@ -8,13 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
+    <!------------ User Login page -------------->
     <div class="container">
         <div class="navbar">
             <a href="index.html"><img src="/images/logo.png" class="logo" alt="logo"></a>
@@ -30,7 +28,7 @@
             <p class="cart-count">0</p>
         </div>
     </div>
-    <!-- account-page -->
+    <!------------ Switch between Login and Register -------------->
     <div class="account-page">
         <div class="container">
             <div class="row">
@@ -92,7 +90,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!------------ JS for toggle menu -------------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px"
@@ -105,7 +103,7 @@
             }
         }
     </script>
-    <!-- js for toggle form -->
+    <!------------ JS for toggle form -------------->
     <script>
         var LoginForm = document.getElementById("LoginForm");
         var RegistrationForm = document.getElementById("RegistrationForm");
