--- a/Ecommerce/clickable-prototype/admin_order_details.html
+++ b/Ecommerce/clickable-prototype/admin_order_details.html
@@ -8,19 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Details - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Remember to include jQuery :) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
-    <!-- jQuery Modal -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 </head>
 
 <body>
+    <!---------- Order Summary ---------->
     <div class="container">
         <div class="navbar">
             <img src="/images/logo.png" class="logo" alt="logo">
@@ -35,25 +27,23 @@
             <img src="/images/menu.png" class="menu-icon" onclick="menuToggle()">
         </div>
     </div>
-    <!------------ order details -------------->
     <div class="small-container cart-page">
         <div class="row row-2">
             <div class="col-2">
                 <h3>Order ID: 1</h3>
                 <h4>Customer shipping info:</h4>
                 <p>Name: Bob</p>
-                <p>Addres: 123 dojo way</p>
+                <p>Address: 123 dojo way</p>
                 <p>City: Seattle</p>
                 <p>State: WA</p>
                 <p>Zip: 91298</p>
                 <hr>
                 <h4>Customer billing info</h4>
                 <p>Name: Bob</p>
-                <p>Addres: 123 dojo way</p>
+                <p>Address: 123 dojo way</p>
                 <p>City: Seattle</p>
                 <p>State: WA</p>
                 <p>Zip: 91298</p>
-
             </div>
             <table class="col-2">
                 <tr>
@@ -130,7 +120,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!---------- js for toggle menu ---------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px"
@@ -142,20 +132,6 @@
                 MenuItems.style.maxHeight = "0px"
             }
         }
-    </script>
-    <script>
-        $(function () {
-            $("#speed").selectmenu();
-
-            $("#files").selectmenu();
-
-            $("#number")
-                .selectmenu()
-                .selectmenu("menuWidget")
-                .addClass("overflow");
-
-            $("#salutation").selectmenu();
-        });
     </script>
 </body>
 
