--- a/Ecommerce/clickable-prototype/admin_orders.html
+++ b/Ecommerce/clickable-prototype/admin_orders.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Orders - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -29,7 +26,7 @@
             <img src="/images/menu.png" class="menu-icon" onclick="menuToggle()">
         </div>
     </div>
-    <!------------ list of orders -------------->
+    <!---------- Orders List ---------->
     <div class="small-container cart-page">
         <div class="search-form">
             <form action="">
@@ -155,7 +152,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!---------- js for toggle menu ---------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px"
