--- a/Ecommerce/clickable-prototype/admin_products.html
+++ b/Ecommerce/clickable-prototype/admin_products.html
@@ -8,14 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Products - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Remember to include jQuery :) -->
+    <!---------- jQuery ---------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
-    <!-- jQuery Modal -->
+    <!---------- jQuery Modal ---------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 </head>
@@ -35,7 +31,7 @@
             <img src="/images/menu.png" class="menu-icon" onclick="menuToggle()">
         </div>
     </div>
-    <!------------ list of orders -------------->
+    <!------------ List of Products -------------->
     <div class="small-container cart-page">
         <div class="search-form">
             <form action="">
@@ -45,7 +41,7 @@
         </div>
         <div class="row row-2">
             <h2>Products</h2>
-            <!-- Link to open the modal -->
+            <!---------- jQuery Model Trigger ---------->
             <a href="#ex1" rel="modal:open" class="btn">Add new product</a>
         </div>
         <table>
@@ -99,7 +95,7 @@
             <span>&#8594;</span>
         </div>
     </div>
-    <!-- Modal HTML embedded directly into document -->
+    <!---------- Modal Add Content ---------->
     <div id="ex1" class="modal">
         <h2>Add a new product</h2>
         <form action="" class="add-product">
@@ -154,7 +150,7 @@
         </form>
         <a href="#" id="close-modal" rel="modal:close">Close</a>
     </div>
-    <!-- edit modal -->
+    <!---------- Modal Edit Content ---------->
     <div id="ex2" class="modal">
         <h2>Edit product</h2>
         <form action="" class="add-product">
@@ -209,7 +205,7 @@
         </form>
         <a href="#" id="close-modal" rel="modal:close">Close</a>
     </div>
-    <!-- delete modal -->
+    <!---------- Modal Delete Content ---------->
     <div id="ex3" class="modal">
         <h2>Are you sure you want to delete this product?</h2>
         <form action="" class="add-product">
@@ -249,7 +245,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!---------- JS for toggle menu ---------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px"
