--- a/Ecommerce/clickable-prototype/cart.html
+++ b/Ecommerce/clickable-prototype/cart.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Products - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -30,7 +27,7 @@
             <p class="cart-count">0</p>
         </div>
     </div>
-    <!------------ cart items details -------------->
+    <!------------ Cart Items Details -------------->
     <div class="small-container cart-page">
         <table>
             <tr>
@@ -130,7 +127,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!------------ JS for toggle menu -------------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px"
