--- a/Ecommerce/clickable-prototype/product_details.html
+++ b/Ecommerce/clickable-prototype/product_details.html
@@ -8,10 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Products - RedCloud</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!---------- jQuery ---------->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
@@ -33,7 +31,7 @@
             <p class="cart-count">0</p>
         </div>
     </div>
-    <!-- single product details -->
+    <!------------ single product details  ------------>
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
@@ -54,8 +52,8 @@
                 </div>
             </div>
             <div class="col-2">
-                <p>Home / T-shirt</p>
-                <h1>Red Printed T-Shirt by HRX</h1>
+                <p>Headphones</p>
+                <h1>Skull Candy by NOLAN COOLEY</h1>
                 <h4>$50.00</h4>
                 <select>
                     <option>Select Size</option>
@@ -76,7 +74,7 @@
             </div>
         </div>
     </div>
-    <!-- title -->
+    <!------------ Title  ------------>
     <div class="small-container">
         <div class="row row-2">
             <h2>Similar Products</h2>
@@ -84,12 +82,12 @@
         </div>
 
     </div>
-    <!-- products -->
+    <!------------ Product  ------------>
     <div class="small-container">
         <div class="row">
             <div class="col-4">
                 <img src="/images/product-1.jpg" alt="">
-                <h4>Red Cloud Shirt</h4>
+                <h4>Red Clouds earbuds</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -101,7 +99,7 @@
             </div>
             <div class="col-4">
                 <img src="/images/product-2.jpg" alt="">
-                <h4>Red Cloud Shoes</h4>
+                <h4>Red Clouds earbuds</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -113,7 +111,7 @@
             </div>
             <div class="col-4">
                 <img src="/images/product-3.jpg" alt="">
-                <h4>Red Cloud Shoes</h4>
+                <h4>Red Clouds earbuds</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -125,7 +123,7 @@
             </div>
             <div class="col-4">
                 <img src="/images/product-4.jpg" alt="">
-                <h4>Red Cloud Shirt</h4>
+                <h4>Red Clouds earbuds</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -168,7 +166,7 @@
             <p class="copyright">Copyright 2021 - Red Clouds PH</p>
         </div>
     </footer>
-    <!-- js for toggle menu -->
+    <!------------ js for toggle menu  ------------>
     <script>
         $("#CartUpdate").click(function () {
             $(".cart-update").fadeIn().delay(2000).fadeOut();
@@ -187,7 +185,7 @@
             }
         }
     </script>
-    <!-- js for product gallery -->
+    <!------------ js for product gallery  ------------>
     <script>
         var ProductImg = document.getElementById("ProductImg");
         var SmallImg = document.getElementsByClassName("small-img");
