--- a/Ecommerce/clickable-prototype/index.html
+++ b/Ecommerce/clickable-prototype/index.html
@@ -32,6 +32,9 @@
             <!------------ Important content -------------->
             <div class="row">
                 <div class="col-2">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png"
+                        alt="">
+
                     <h1>NOLAN COOLEY</h1>
                     <h1>EXCLUSIVE.</h1>
                     <p>We teamed up with artist Nolan Cooley to spice up our best-</p>
