--- a/Ecommerce/clickable-prototype/admin_products.html
+++ b/Ecommerce/clickable-prototype/admin_products.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!---------- jQuery ---------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+        integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
     <!---------- jQuery Modal ---------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -107,42 +109,85 @@
                 <label for="description">Description</label>
                 <textarea type="text" name="description" id="description"></textarea>
             </div>
-            <div class="table-row category-list">
+            <div class="table-row">
                 <label for="category">Categories</label>
-                <div class="dropdown">
-                    <span id="category-select">Select</span>
-                    <div class="dropdown-content">
-                        <a href="">Bags</a>
-                        <a href="">Shoe</a>
-                        <a href="">Shirt</a>
-                        <a href="">Phone</a>
-                        <a href="">Charger</a>
+                <details>
+                    <summary class="category-list">
+                        Categories<i class="fas fa-sort-down"></i>
+                    </summary>
+                    <div class="dropdown-wrapper">
+                        <ul>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                        </ul>
                     </div>
-                </div>
+                </details>
             </div>
             <div class="table-row">
                 <label for="add-category">Add new category</label>
                 <input type="text" id="add-category">
             </div>
+        </form>
+        <form action="" class="sortable-pictures">
             <div class="table-row">
                 <label for="images">Images</label>
                 <input type="submit" class="btn" id="images" value="Upload">
             </div>
-            <div class="table-row small-img-row">
-                <div class="small-img-col">
-                    <img src="/images/gallery-1.jpg" class="gallery small-img">
-                </div>
-                <div class="small-img-col">
-                    <img src="/images/gallery-2.jpg" class="gallery small-img">
-                </div>
-                <div class="small-img-col">
-                    <img src="/images/gallery-3.jpg" class="gallery small-img">
-                </div>
-                <div class="small-img-col">
-                    <img src="/images/gallery-4.jpg" class="gallery small-img">
-                </div>
-            </div>
             <div class="table-row">
+                <ul class="sortable">
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-1.jpg" class="gallery small-img">
+                        <span>gallery-1.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-4.jpg" class="gallery small-img">
+                        <span>gallery-4.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-3.jpg" class="gallery small-img">
+                        <span>gallery-3.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-2.jpg" class="gallery small-img">
+                        <span>gallery-2.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="image-selections">
                 <input type="submit" id="cancel" class="btn add-product-btn" value="Cancel">
                 <input type="submit" id="preview" class="btn add-product-btn" value="Preview">
                 <input type="submit" id="Update" class="btn add-product-btn" value="Update">
@@ -162,42 +207,85 @@
                 <label for="description">Description</label>
                 <textarea type="text" name="description" id="description"></textarea>
             </div>
-            <div class="table-row category-list">
+            <div class="table-row">
                 <label for="category">Categories</label>
-                <div class="dropdown">
-                    <span id="category-select">Select</span>
-                    <div class="dropdown-content">
-                        <a href="">Bags</a>
-                        <a href="">Shoe</a>
-                        <a href="">Shirt</a>
-                        <a href="">Phone</a>
-                        <a href="">Charger</a>
+                <details>
+                    <summary class="category-list">
+                        Categories<i class="fas fa-sort-down"></i>
+                    </summary>
+                    <div class="dropdown-wrapper">
+                        <ul>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                            <li class="hover-tools">
+                                <input type="text" name="category" value="Earbuds" class="category-input" readonly>
+                                <i class="fas fa-pencil-alt edit"></i>
+                                <i class="fas fa-trash delete"></i>
+                            </li>
+                        </ul>
                     </div>
-                </div>
+                </details>
             </div>
             <div class="table-row">
                 <label for="add-category">Add new category</label>
                 <input type="text" id="add-category">
             </div>
+        </form>
+        <form action="" class="sortable-pictures">
             <div class="table-row">
                 <label for="images">Images</label>
                 <input type="submit" class="btn" id="images" value="Upload">
             </div>
-            <div class="table-row small-img-row">
-                <div class="small-img-col">
-                    <img src="/images/gallery-1.jpg" class="gallery small-img">
-                </div>
-                <div class="small-img-col">
-                    <img src="/images/gallery-2.jpg" class="gallery small-img">
-                </div>
-                <div class="small-img-col">
-                    <img src="/images/gallery-3.jpg" class="gallery small-img">
-                </div>
-                <div class="small-img-col">
-                    <img src="/images/gallery-4.jpg" class="gallery small-img">
-                </div>
-            </div>
             <div class="table-row">
+                <ul class="sortable">
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-1.jpg" class="gallery small-img">
+                        <span>gallery-1.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-4.jpg" class="gallery small-img">
+                        <span>gallery-4.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-3.jpg" class="gallery small-img">
+                        <span>gallery-3.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                    <li class="ui-state-default">
+                        <span><i class="fas fa-grip-horizontal"></i></span>
+                        <img src="/images/gallery-2.jpg" class="gallery small-img">
+                        <span>gallery-2.jpg</span>
+                        <label for="main">Main</label>
+                        <input type="checkbox" name="main">
+                        <i class="fas fa-trash delete-img"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="image-selections">
                 <input type="submit" id="cancel" class="btn add-product-btn" value="Cancel">
                 <input type="submit" id="preview" class="btn add-product-btn" value="Preview">
                 <input type="submit" id="Update" class="btn add-product-btn" value="Update">
@@ -257,6 +345,20 @@
                 MenuItems.style.maxHeight = "0px"
             }
         }
+    </script>
+    <script>
+        $('.edit').click(function () {
+            $('.category-input').css('background-color', '#ccc');
+            $('.category-input').attr("readonly", false);
+        });
+        $('.category-input').mouseleave(function () {
+            $('.category-input').css('background-color', '#fff');
+            $('.category-input').attr("readonly", true);
+        });
+        $(function () {
+            $(".sortable").sortable();
+            $(".sortable").disableSelection();
+        });
     </script>
 </body>
 
